--- a/graphql-apollo-mongo/package.json
+++ b/graphql-apollo-mongo/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "graphql": "^15.2.0",
     "mongoose": "^5.9.21",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "standard": "^14.3.4"
   }
 }
