--- a/graphql-apollo-mongo/package.json
+++ b/graphql-apollo-mongo/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js"
+    "start": "nodemon --exec babel-node src/index.js",
+    "test": "jest"
   },
   "dependencies": {
     "@babel/cli": "^7.10.4",
